<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings_header">

        <EditTextPreference
            android:dialogMessage="@string/server_ip_dialog_message"
            android:icon="@android:drawable/ic_menu_manage"
            app:defaultValue="192.168.1.30"
            app:key="server_ip"
            app:title="@string/server_ip_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogMessage="@string/used_id_dialog_message"
            android:icon="@android:drawable/ic_menu_myplaces"
            app:defaultValue="john-doe"
            app:key="user_id"
            app:title="@string/user_id_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogMessage="@string/folder_path_dialog_message"
            android:icon="@android:drawable/ic_menu_save"
            app:defaultValue="/sdcard/DCIM/CameraTest"
            app:key="folder_path"
            app:title="@string/folder_path_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Technical">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="sync_all_files"
            android:title="@string/sync_all_files_title"
            app:icon="@android:drawable/ic_menu_report_image"
            app:summary="@string/sync_all_files_summary" />

    </PreferenceCategory>

</PreferenceScreen>
